---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "proc __(var c_any : char(*), var s_any : string(*), var _v00, _v01, _v02, _v03, _v04, _v05, _v06, _v07, _v08 : string(*))\n% all runtime checked\nvar c : char\nvar c1 : char(1)\nvar c5 : char(5)\nvar c255 : char(255)\nvar s : string\nvar s1 : string(1)\nvar s5 : string(5)\n\n_v00 := c\n_v01 := c1\n_v02 := c5\n_v03 := c255\n_v04 := c_any\n_v05 := s\n_v06 := s1\n_v07 := s5\n_v08 := s_any\nend __\n"
---
"__"@(FileId(1), 5..7) [Subprogram(Procedure)]: procedure ( pass(var ref) char_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, pass(var ref) string_n Any, ) -> void
"c_any"@(FileId(1), 12..17) [Param(Reference(Var), No)]: char_n Any
"s_any"@(FileId(1), 33..38) [Param(Reference(Var), No)]: string_n Any
"_v00"@(FileId(1), 56..60) [Param(Reference(Var), No)]: string_n Any
"_v01"@(FileId(1), 62..66) [Param(Reference(Var), No)]: string_n Any
"_v02"@(FileId(1), 68..72) [Param(Reference(Var), No)]: string_n Any
"_v03"@(FileId(1), 74..78) [Param(Reference(Var), No)]: string_n Any
"_v04"@(FileId(1), 80..84) [Param(Reference(Var), No)]: string_n Any
"_v05"@(FileId(1), 86..90) [Param(Reference(Var), No)]: string_n Any
"_v06"@(FileId(1), 92..96) [Param(Reference(Var), No)]: string_n Any
"_v07"@(FileId(1), 98..102) [Param(Reference(Var), No)]: string_n Any
"_v08"@(FileId(1), 104..108) [Param(Reference(Var), No)]: string_n Any
"c"@(FileId(1), 148..149) [ConstVar(Var, No)]: char
"c1"@(FileId(1), 161..163) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"c5"@(FileId(1), 178..180) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"c255"@(FileId(1), 195..199) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(2)))
"s"@(FileId(1), 216..217) [ConstVar(Var, No)]: string
"s1"@(FileId(1), 231..233) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(3)))
"s5"@(FileId(1), 250..252) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(4)))
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

